# inline-html

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README  README.md
cmake/: macros.cmake  vars.cmake
core/: CMakeLists.txt
core/include/: html_static_embed.h  html_static_embedder.h  inline_html.h
core/include/inline_html/: exception.h  inline_html.h
core/src/: html_static_embed.cpp  html_static_embedder.cpp  inline_html.cpp
examples/: CMakeLists.txt
examples/embed/: CMakeLists.txt
examples/embed/src/: embed.cpp
examples/inline_files/: CMakeLists.txt
examples/inline_files/res/: script.js
examples/inline_files/src/: inline_files.cpp
examples/inline_res/: CMakeLists.txt
examples/inline_res/res/: script.js  style.css
examples/inline_res/src/: inline_res.cpp
examples/load-res/: CMakeLists.txt
examples/load-res/res/: index.html
examples/load-res/src/: load_res.cpp  resource.rc
examples/load_from_files/: CMakeLists.txt
examples/load_from_files/res/: style.css
examples/load_from_files/src/: load_from_files.cpp
examples/load_from_res/: CMakeLists.txt
examples/load_from_res/src/: RCa09724  load_from_res.cpp
tests/: CMakeLists.txt
tests/embed_static_from_files/: CMakeLists.txt
tests/embed_static_from_files/include/: resource.h
tests/embed_static_from_res/: CMakeLists.txt
tests/inline_files/: CMakeLists.txt
tests/inline_files_test/: CMakeLists.txt
tests/inline_res/: CMakeLists.txt
tests/inline_res_test/: CMakeLists.txt
tests/load_html_from_file/: CMakeLists.txt
tests/load_html_from_res/: CMakeLists.txt
(+15 files in other folders)
